<resources>
    <string name="app_name">Game App</string>
    <string name="start">Start Game</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="score">Score: %1$d</string>
    <string-array name="games">
        <item>Quick Quiz</item>
        <item>Flag Memory</item>
        <item>Update Profile</item>
        <item>Find Friends</item>
        <item>High Scores</item>
        <item>Friend Requests</item>
        <item>Log Out</item>
    </string-array>
    <string name="target_flag_list">Target Flag List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="enter_mail">enter mail</string>
    <string name="password">password</string>
    <string name="location">location</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_mail">Enter Mail</string>
    <string name="login_password">Enter Password</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="edit">Edit Profile</string>
    <string name="quiz_scores">Quiz Game Scores</string>
    <string name="flag_scores">Flag Game Scores</string>
    <string name="search">Search User</string>
    <string name="user_query">User Query</string>
    <string name="friend_list">Friend List</string>
    <string name="requests">Friend Requests</string>

</resources>
