<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.gameapp.Register"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/sign_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/sign_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:hint="@string/enter_mail"/>

    <EditText
        android:id="@+id/sign_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/sign_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:hint="@string/location"/>
</LinearLayout>
