<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_init_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.gameapp.InitialScreen">

    <EditText
        android:id="@+id/enter_mail"
        android:hint="@string/login_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:minEms="10"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/enter_password"
        android:hint="@string/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_below="@id/enter_mail"
        android:minEms="10"
        android:inputType="textPassword" />
    <Button
        android:text="@string/login"
        android:id="@+id/start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_password"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:onClick="onLogin"/>
    <Button
        android:text="@string/register"
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_game"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/login_loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AVLoadingIndicatorView.Large"
        android:visibility="gone"
        app:indicatorName="PacmanIndicator"
        app:indicatorColor="@color/black"
        android:layout_below="@id/register_button"
    />

</RelativeLayout>

